compiler/plc_xml/src/model/snapshots/plc_xml__model__fbd__tests__add_block.snap
---
source: compiler/plc_xml/src/model/fbd.rs
expression: "FunctionBlockDiagram::visit(&mut reader).unwrap()"
---
FunctionBlockDiagram {
    nodes: {
        2: FunctionBlockVariable(
            FunctionBlockVariable {
                kind: Input,
                local_id: 2,
                negated: false,
                expression: "a",
                execution_order_id: None,
                ref_local_id: None,
            },
        ),
        3: FunctionBlockVariable(
            FunctionBlockVariable {
                kind: Input,
                local_id: 3,
                negated: false,
                expression: "b",
                execution_order_id: None,
                ref_local_id: None,
            },
        ),
        1: Block(
            Block {
                local_id: 1,
                type_name: "ADD",
                instance_name: None,
                execution_order_id: Some(
                    0,
                ),
                variables: [
                    BlockVariable {
                        kind: Input,
                        formal_parameter: "a",
                        negated: false,
                        ref_local_id: Some(
                            1,
                        ),
                        edge: None,
                        storage: None,
                        enable: None,
                    },
                    BlockVariable {
                        kind: Input,
                        formal_parameter: "b",
                        negated: false,
                        ref_local_id: Some(
                            2,
                        ),
                        edge: None,
                        storage: None,
                        enable: None,
                    },
                    BlockVariable {
                        kind: Output,
                        formal_parameter: "c",
                        negated: false,
                        ref_local_id: None,
                        edge: None,
                        storage: None,
                        enable: None,
                    },
                ],
            },
        ),
        4: FunctionBlockVariable(
            FunctionBlockVariable {
                kind: Output,
                local_id: 4,
                negated: false,
                expression: "c",
                execution_order_id: Some(
                    1,
                ),
                ref_local_id: Some(
                    1,
                ),
            },
        ),
    },
}
