compiler/plc_xml/src/model/snapshots/plc_xml__model__fbd__tests__recursive_sink_source_connections_are_an_error.snap
---
source: compiler/plc_xml/src/model/fbd.rs
expression: err
---
[
    Diagnostic {
        message: "Sink is connected to itself. Found the following recursion: connection2 -> connection1 -> connection2",
        primary_location: SourceLocation {
            span: Block {
                local_id: 6,
                execution_order: None,
                inner_range: None,
            },
        },
        secondary_locations: None,
        severity: Error,
        error_code: cfc__cyclic_connection,
        sub_diagnostics: [],
        internal_error: None,
    },
    Diagnostic {
        message: "Sink is connected to itself. Found the following recursion: connection2 -> connection1 -> connection2",
        primary_location: SourceLocation {
            span: Block {
                local_id: 6,
                execution_order: None,
                inner_range: None,
            },
        },
        secondary_locations: None,
        severity: Error,
        error_code: cfc__cyclic_connection,
        sub_diagnostics: [],
        internal_error: None,
    },
    Diagnostic {
        message: "Sink is connected to itself. Found the following recursion: connection1 -> connection2 -> connection1",
        primary_location: SourceLocation {
            span: Block {
                local_id: 5,
                execution_order: None,
                inner_range: None,
            },
        },
        secondary_locations: None,
        severity: Error,
        error_code: cfc__cyclic_connection,
        sub_diagnostics: [],
        internal_error: None,
    },
]
