compiler/plc_xml/src/model/snapshots/plc_xml__model__fbd__tests__unassociated_sink_removed_from_model_with_error.snap
---
source: compiler/plc_xml/src/model/fbd.rs
expression: err
---
[
    Diagnostic {
        message: "Expected a corresponding source-connection mark for sink 'connection1', but could not find one.",
        primary_location: SourceLocation {
            span: Block {
                local_id: 3,
                execution_order: None,
                inner_range: None,
            },
        },
        secondary_locations: None,
        severity: Error,
        error_code: cfc__no_associated_connector,
        sub_diagnostics: [],
        internal_error: None,
    },
]
