compiler/plc_xml/src/model/snapshots/plc_xml__model__fbd__tests__unconnected_source_has_no_effect.snap
---
source: compiler/plc_xml/src/model/fbd.rs
expression: err
---
[
    Diagnostic {
        message: "Source 'connection1' is not connected.",
        primary_location: SourceLocation {
            span: Block {
                local_id: 3,
                execution_order: None,
                inner_range: None,
            },
        },
        secondary_locations: None,
        severity: Error,
        error_code: cfc__unconnected_source,
        sub_diagnostics: [],
        internal_error: None,
    },
]
