compiler/plc_xml/src/model/snapshots/plc_xml__model__fbd__tests__unconnected_source_has_no_effet.snap
---
source: compiler/plc_xml/src/model/fbd.rs
expression: err
---
[
    SemanticError {
        message: "Source 'connection1' is not connected.",
        range: [
            SourceLocation {
                span: Block {
                    local_id: 3,
                    execution_order: None,
                    inner_range: None,
                },
            },
        ],
        err_no: cfc__unconnected_source,
    },
]
